testsuite/tests/parser/should_fail/badRuleMarker.hs
module BadRuleMarker where

{-# INLINE [+1] g #-}
g = id
