testsuite/tests/parser/should_fail/badRuleMarker.stderr
badRuleMarker.hs:3:13: error: [GHC-50396]
    Invalid rule activation marker

